# firstder-test

./: .env  .gitignore  Dermafy.sql  Dermafy.tar  README.md  Schema.py  about.html  api.key  base.html  blogpost.md  database.py  footer.html  hero.html  index.html  index.html.mod  main.py  main.py.mod  model.py  models.py  navbar.html  posts.py  prediction.html  prediction.html.live  prediction_dummy.html  prediction_live.html  predictions.csv  pyproject.toml  requirements.txt  results.html  results_details.html  servertest.py  user_inputs.csv
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
stable/: footer.html  hero.html  index.html  models.py  navbar.html  prediction.html  prediction_bak.html  prediction_dummy.html  prediction_live.html  results.html  results_details.html
