[tool.poetry]
name = "firstdermdemo"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
python-multipart = "^0.0.5"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
